--- a/doqmeat/music/cds/body.css
+++ b/doqmeat/music/cds/body.css
@@ -1,5 +1,3 @@
-/* for the spinning cds: https://codepen.io/doqmeat/pen/gbpJNRr?editors=1100 */
-
 * {
 	box-sizing: border-box;
 }
@@ -75,30 +73,76 @@ header {
 	margin: auto;
 	margin-bottom: 20px;
 	column-count: 4;
-	column-gap: 20px;
+	column-gap: 30px;
 	line-height: 0px;
 }
 
 .cd {
 	position: relative;
 	display: block;
-	overflow: hidden;
-	margin: 20px 0px;
+	overflow: visible;
+	margin: 50px 0px;
 	border: 2px solid var(--grey);
 	border-radius: 5px;
-	transition-duration: 0.5s;
+	transition-duration: 1s;
 
 	img {
 		width: 100%;
+	}
+
+	img.cover {
+		position: relative;
+	}
+
+	img.disk-spin {
+		position: absolute;
+		display: none;
+		z-index: -1;
+		pointer-events: none;
+	}
+}
+
+@keyframes spin {
+	from {
+		rotate: 0deg;
+	}
+	to {
+		rotate: 360deg;
+	}
+}
+
+@keyframes top {
+	from {
+		top: 0px;
+		opacity: 0;
+	}
+	to {
+		top: -170px;
+		opacity: 1;
 	}
 }
 
 .cd:hover {
 	box-shadow: 3px 2px 5px black;
-}
 
-.cd.disk {
-	border: none;
+	.hov {
+		z-index: 5;
+	}
+
+	img.cover {
+		z-index: 4;
+	}
+
+	img.disk-spin {
+		display: block;
+		z-index: 1;
+		animation-name: spin, top;
+		animation-delay: 1.4s, 0s;
+		animation-duration: 5s, 1.5s;
+		animation-iteration-count: infinite, 1;
+		animation-timing-function: linear, ease;
+		animation-fill-mode: none, forwards;
+	}
 }
 
 .hov {
