--- a/doqmeat/vgs/body.css
+++ b/doqmeat/vgs/body.css
@@ -125,11 +125,15 @@ figure {
 	padding: 0;
 	margin: 10px;
 	text-align: center;
-	font-size: 15px;
-}
 
-figure img {
-	max-width: 100%;
+	img {
+		max-width: 100%;
+	}
+
+	figcaption {
+		font-size: 16px;
+		font-family: basiic, arial;
+	}
 }
 
 /* entries content */
