made a lighter version of the purple grid bg

--- a/doqmeat/notebook/index.css
+++ b/doqmeat/notebook/index.css
@@ -227,7 +227,7 @@ li {
 /* INFO BOX */
 
 .info-p {
-	background: url(/notebook/!g/grid-purple.png);
+	background: url(/notebook/!g/grid-purple-light.png);
 	border-color: #e2d2f0;
 }
 
