--- a/doqmeat/journal/files/index.css
+++ b/doqmeat/journal/files/index.css
@@ -123,7 +123,7 @@ button:hover {
 	font-size: 15px;
 	width: 350px;
 	height: 250px;
-	background: url("!g/memo-cloud.jpg");
+	background: url("../!g/memo-cloud.jpg");
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
@@ -136,7 +136,7 @@ button:hover {
 	rotate: -3deg;
 	width: 300px;
 	height: 400px;
-	background: url("!g/memo-green.jpg");
+	background: url("../!g/memo-green.jpg");
 	background-size: cover;
 }
 
@@ -147,7 +147,7 @@ button:hover {
 	padding: 40px 20px;
 	width: 290px;
 	height: 190px;
-	background: url("!g/memo-picnic.jpg");
+	background: url("../!g/memo-picnic.jpg");
 	background-size: cover;
 }
 
@@ -157,7 +157,7 @@ button:hover {
 	rotate: -10deg;
 	width: 300px;
 	height: 290px;
-	background: url("!g/memo-cube.jpg");
+	background: url("../!g/memo-cube.jpg");
 	background-position: top center;
 	background-size: cover;
 }
