--- a/doqmeat/music/mini-pages/frame.css
+++ b/doqmeat/music/mini-pages/frame.css
@@ -10,14 +10,19 @@ main {
 }
 
 h1 {
+	font-size: 1.6rem;
 	text-align: center;
 }
 
-h2,
+h2 {
+	font-size: 1.2rem;
+}
+
 h3,
 h4,
 h5,
 h6 {
+	font-size: 0.8rem;
 	text-align: right;
 }
 
@@ -41,7 +46,8 @@ footer {
 		background: var(--l-yellow);
 	}
 
-	#frame, main {
+	#frame,
+	main {
 		border: none;
 		margin: auto;
 	}
@@ -52,7 +58,8 @@ footer {
 		background: var(--l-yellow);
 	}
 
-	#frame, main {
+	#frame,
+	main {
 		border: none;
 		margin: auto;
 	}
@@ -64,20 +71,22 @@ footer {
 	}
 
 	@media only screen and (max-width: 600px) {
-
 		h1,
 		h2,
 		h3,
 		h4,
 		h5,
 		h6 {
-			font-family: daydream, gaegu-b, var(--fonts);
 			font-size: small;
 			word-spacing: 10px;
 			letter-spacing: 3px;
 			line-height: normal;
 			background: rgb(254, 234, 199);
-			background: linear-gradient(61deg, rgba(254, 234, 199, 1) 0%, rgba(251, 181, 205, 1) 100%);
+			background: linear-gradient(
+				61deg,
+				rgba(254, 234, 199, 1) 0%,
+				rgba(251, 181, 205, 1) 100%
+			);
 			-webkit-background-clip: text;
 			-webkit-text-fill-color: transparent;
 			-webkit-text-stroke-width: 1px;
