--- a/doqmeat/music/mini-pages/frame.css
+++ b/doqmeat/music/mini-pages/frame.css
@@ -51,6 +51,10 @@ footer {
 		border: none;
 		margin: auto;
 	}
+
+	footer {
+		margin-bottom: 0;
+	}
 }
 
 @media only screen and (max-width: 710px) {
