improvements to CSS and JS of homepage

--- a/doqmeat/!f/v5/body.css
+++ b/doqmeat/!f/v5/body.css
@@ -18,7 +18,7 @@ html {
 
 body {
 	background: url("/!g/bg/bggrid-transp.png");
-	background-color: white;
+	background-color: rgb(255, 252, 230);
 	margin: 0;
 	margin-top: 50px;
 	color: #916b40;
