updating scrapbook n microblog

--- a/doqmeat/scrapbook/body.css
+++ b/doqmeat/scrapbook/body.css
@@ -213,7 +213,7 @@ header.page {
 }
 
 li details {
-	display: inline;
+	display: inline-block;
 	vertical-align: bottom;
 	padding: 1px;
 	border-radius: 4px;
