--- a/doqmeat/fish-love/fish.css
+++ b/doqmeat/fish-love/fish.css
@@ -7,7 +7,7 @@ body {
 	background-size: cover;
 	background-attachment: fixed;
 	background-position: center;
-	font-family: papyrus;
+	font-family: papyrus, ms pgothic, arial;
 }
 
 a {
